--- a/problem26.ipynb
+++ b/problem26.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -105,23 +105,12 @@
      "output_type": "stream",
      "text": [
       "1/2 has a recurring cycle length of 0\n",
-      "{1: 0}\n",
       "1/3 has a recurring cycle length of 1\n",
       "1/4 has a recurring cycle length of 0\n",
       "1/5 has a recurring cycle length of 0\n",
-      "{1: 0, 4: 1}\n",
       "1/6 has a recurring cycle length of 1\n",
-      "{1: 0, 3: 1, 2: 2, 6: 3, 4: 4, 5: 5}\n",
       "1/7 has a recurring cycle length of 6\n",
-      "1/8 has a recurring cycle length of 0\n",
-      "{1: 0}\n",
-      "1/9 has a recurring cycle length of 1\n",
-      "1/10 has a recurring cycle length of 0\n",
-      "{1: 0}\n",
-      "{1: 0, 4: 1}\n",
-      "{1: 0, 3: 1, 2: 2, 6: 3, 4: 4, 5: 5}\n",
-      "{1: 0}\n",
-      "The value of d < 1000 with the longest recurring cycle is 7 with a cycle length of 6\n"
+      "The value of d < 1000 with the longest recurring cycle is 983 with a cycle length of 982\n"
      ]
     }
    ],
@@ -141,19 +130,28 @@
     "    return 0  # If value becomes 0, it means the decimal terminates\n",
     "\n",
     "# Testing the function with different values of d\n",
-    "for d in range(2, 11):\n",
+    "for d in range(2, 8):\n",
     "    print(f\"1/{d} has a recurring cycle length of {get_recurring_cycle_length(d)}\")\n",
     "\n",
     "# To find the value of d < 1000 with the longest recurring cycle\n",
     "max_length = 0\n",
     "max_d = 0\n",
-    "for d in range(2, 10):\n",
+    "for d in range(2, 1001):\n",
     "    cycle_length = get_recurring_cycle_length(d)\n",
     "    if cycle_length > max_length:\n",
     "        max_length = cycle_length\n",
     "        max_d = d\n",
     "\n",
     "print(f\"The value of d < 1000 with the longest recurring cycle is {max_d} with a cycle length of {max_length}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The solution above works very differently than mine on the principle of remainders.\n",
+    "You get the 'span' in the fraction by taking the difference of the position where that remainder was last seen, aka if you're seeing a '7' again that means the pattern is repeating, thus the difference between them is the length of the cycle. To iterate through the positions you are going, placewise. Multiplying by 10 (moving a decimal position) and then taking the remainder with the initial number to get the next remainder.\n",
+    "I basically get it. I couldn't come up with this on my own at this point but I can more or less see how it works and visualize it in my head."
    ]
   }
  ],
